--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.truncate{
+    width: 50px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.modal-body{
+  color: black;
+}
+.modal-title{
+  color:black;
+}
